@@ -1,3 +1,5 @@
+* Allow validate_presence_of to work with associations. [#63]
+
 * Allow validate_uniqueness_of to work when scopes are not stringfiable values.
   You can now give timestamps, datetime, date and boolean as scopes. [#60]
 
